Some Windows OS fixes